<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FakeJL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="bottom_action_bar_news">资讯</string>
	<string name="bottom_action_bar_video">视频</string>
	<string name="bottom_action_bar_profession">职业</string>
	<string name="bottom_action_bar_data">资料</string>
	<string name="bottom_action_bar_more">更多</string>
</resources>
