<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/actionBarBg"
    android:orientation="horizontal" 
    android:layout_gravity="bottom">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/tab_btn_sel1"
        android:gravity="center"
        android:text="@string/bottom_action_bar_news"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/tab_btn_nor2"
        android:gravity="center"
        android:text="@string/bottom_action_bar_video"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/tab_btn_nor3"
        android:gravity="center"
        android:text="@string/bottom_action_bar_profession"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/tab_btn_nor4"
        android:gravity="center"
        android:text="@string/bottom_action_bar_data" 
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/tab_btn_nor5"
        android:gravity="center"
        android:text="@string/bottom_action_bar_more" 
        android:textColor="@color/white"/>

</LinearLayout>